# -bailingOCR

./: CMakeLists.txt  README.md  a.out  model  tags
BailingJniPro/: deal.sh  org_img_processing_BailingJni.h  testDemo.java
BailingJniPro/org.bak1/img/processing/: BailingJni.java
BailingJniPro/org/img/processing/: BailingDemo.java  BailingJni.java  testDemo.java
include/: BailingJni.h  Candidate.h  DealCorrect.h  GetCandidate.h  LinkCandidate.h  MSERProcess.h  TextRecognition.h  head.h
linux/: CMakeCache.txt  Makefile  bailing  cmake_install.cmake  res  res1
model/resource/: config.txt
model/tessdata/: num.traineddata
src/: BailingJni.cpp  DealCorrect.cpp  GetCandidate.cpp  LinkCandidate.cpp  LinkCandidateUtil.cpp  MSERProcess.cpp  TextRecognition.cpp  bailing.cpp  main.cpp
